Fix spacing around page title

--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -121,7 +121,7 @@ img {
 }
 
 .no-content {
-	height: calc(100vh - 140px);
+	height: calc(100vh - 144px);
 }
 
 #not-found {
@@ -224,7 +224,7 @@ img {
 				}
 				&.expand {
 					width: 100%;
-					min-height: calc(100vh - 140px);
+					min-height: calc(100vh - 144px);
 					.expand,
 					.badge {
 						display: none;
